Corrected dark mode container top margin

--- a/styles.css
+++ b/styles.css
@@ -213,7 +213,7 @@ i {
   background-size: cover;
 }
 .dark .container {
-  margin: 100px auto;
+  margin: 30px auto;
   width: 70%;
   background: rgba(8, 8, 8, 0.5);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
